# wav_converter

./: .travis.yml  CMakeLists.txt  README.md
include/: converter.hpp  wav.h
libs/lame-3.99.5/: .~lock.USAGE#
libs/lame-3.99.5/frontend/: amiga_mpega.d  brhist.d  console.d  get_audio.d  lame  lametime.d  main.d  parse.d  timestatus.d
libs/lame-3.99.5/libmp3lame/: VbrTag.d  bitstream.d  encoder.d  fft.d  gain_analysis.d  id3tag.d  lame.d  libmp3lame.lib  mpglib_interface.d  newmdct.d  presets.d  psymodel.d  quantize.d  quantize_pvt.d  reservoir.d  set_get.d  tables.d  takehiro.d  util.d  vbrquantize.d  version.d
libs/lame-3.99.5/libmp3lame/vector/: xmm_quantize_sub.d
libs/lame-3.99.5/mpglib/: common.d  dct64_i386.d  decode_i386.d  interface.d  layer1.d  layer2.d  layer3.d  tabinit.d
src/: CMakeLists.txt  audio_converter.cpp  converter.cpp  main.cpp  wav.c
test/: CMakeLists.txt  test.cpp
